--- a/index.html
+++ b/index.html
@@ -105,12 +105,10 @@
 			<div class="navbar-collapse collapse" id="kane-navigation">
 				<ul class="nav navbar-nav navbar-right main-navigation">
 					<li><a href="#home">Home</a></li>
-					<li><a href="#features">Hvad?</a></li>
+					<li><a href="#features">Hvad ?</a></li>
+					<li><a href="#hvem">Hvem ?</a></li>
 					<li><a href="#brief1">Huskeliste</a></li>
-					<li><a href="#brief2">Desicribe</a></li>
-					<li><a href="#services">Services</a></li>
-					<li><a href="#screenshot-section">Screenshots</a></li>
-					<li><a href="#download">Download</a></li>
+					<li><a href="#download">Tilmelding</a></li>
 				</ul>
 			</div>
 		</div> <!-- /END CONTAINER -->
@@ -349,7 +347,7 @@
 <!-- =========================
      TESTIMONIALS 
 ============================== -->
-<section class="testimonials">
+<section class="testimonials" id="hvem">
 
 <div class="color-overlay">
 	
@@ -436,6 +434,8 @@
 				</div>
  -->
 				<div class="message">
+					Hurtig. Frygtløs.
+					<br>
 					Bakkernes konge. 
 				</div>
 
@@ -518,7 +518,7 @@
 				<!-- DOWNLOAD BUTTONS AREA -->
 				<div class="download-container">
 					<h2 class=" wow fadeInLeft animated" data-wow-offset="10" data-wow-duration="1.5s">Tilmeld dig ved at svare på email invitationen</h2>
-					
+					<h4>Inden d. 4. December 2015</h4>
 				</div>
 				<!-- END OF DOWNLOAD BUTTONS AREA -->
 				
@@ -570,7 +570,7 @@
 	
 	<!-- COPYRIGHT TEXT -->
 	<p class="copyright">
-		©2015 Rikke, Ingse & <em>The incredible M</em> 
+		©2015 Rikke, Ingse & Christian 
 	</p>
 
 </div>
