new image: Husk

--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
 		<!-- PHONES IMAGE -->
 		<div class="col-md-6 wow fadeInRight animated" data-wow-offset="10" data-wow-duration="1.5s">
 			<div class="phone-image">
-				<img src="images/2-iphone-left.png" alt="">
+				<img src="images/deers.png" alt="">
 			</div>
 		</div>
 		
@@ -493,7 +493,7 @@
 			</div>
 			
 			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+				Husk husk husk
 			</p>
 			
 			<!-- FEATURE LIST -->
