--- a/index.html
+++ b/index.html
@@ -65,6 +65,43 @@
 
 <!-- JQUERY -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+
+<script type="text/javascript">
+    // When the window has finished loading create our google map below
+    google.maps.event.addDomListener(window, 'load', init);
+
+    function init() {
+        // Basic options for a simple Google Map
+        // For more options see: https://developers.google.com/maps/documentation/javascript/reference#MapOptions
+        var mapOptions = {
+            // How zoomed in you want the map to start at (always required)
+            zoom: 9,
+
+            // The latitude and longitude to center the map (always required)
+            center: new google.maps.LatLng(56.078254, 9.633826), // New York
+
+            // How you would like to style the map. 
+            // This is where you would paste any style found on Snazzy Maps.
+            styles: [{"featureType":"water","elementType":"geometry","stylers":[{"color":"#e9e9e9"},{"lightness":17}]},{"featureType":"landscape","elementType":"geometry","stylers":[{"color":"#f5f5f5"},{"lightness":20}]},{"featureType":"road.highway","elementType":"geometry.fill","stylers":[{"color":"#ffffff"},{"lightness":17}]},{"featureType":"road.highway","elementType":"geometry.stroke","stylers":[{"color":"#ffffff"},{"lightness":29},{"weight":0.2}]},{"featureType":"road.arterial","elementType":"geometry","stylers":[{"color":"#ffffff"},{"lightness":18}]},{"featureType":"road.local","elementType":"geometry","stylers":[{"color":"#ffffff"},{"lightness":16}]},{"featureType":"poi","elementType":"geometry","stylers":[{"color":"#f5f5f5"},{"lightness":21}]},{"featureType":"poi.park","elementType":"geometry","stylers":[{"color":"#dedede"},{"lightness":21}]},{"elementType":"labels.text.stroke","stylers":[{"visibility":"on"},{"color":"#ffffff"},{"lightness":16}]},{"elementType":"labels.text.fill","stylers":[{"saturation":36},{"color":"#333333"},{"lightness":40}]},{"elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"geometry","stylers":[{"color":"#f2f2f2"},{"lightness":19}]},{"featureType":"administrative","elementType":"geometry.fill","stylers":[{"color":"#fefefe"},{"lightness":20}]},{"featureType":"administrative","elementType":"geometry.stroke","stylers":[{"color":"#fefefe"},{"lightness":17},{"weight":1.2}]}]
+        };
+
+        // Get the HTML DOM element that will contain your map 
+        // We are using a div with id="map" seen below in the <body>
+        var mapElement = document.getElementById('map');
+
+        // Create the Google Map using our element and options defined above
+        var map = new google.maps.Map(mapElement, mapOptions);
+
+        // Let's also add a marker while we're at it
+        var marker = new google.maps.Marker({
+            position: new google.maps.LatLng(56.078254, 9.633826),
+            map: map,
+            title: 'HK'
+        });
+    }
+</script>
+
 
 </head>
 
@@ -107,6 +144,7 @@
 					<li><a href="#home">Home</a></li>
 					<li><a href="#features">Hvad ?</a></li>
 					<li><a href="#hvem">Hvem ?</a></li>
+					<li><a href="#address">Hvor ?</a></li>
 					<li><a href="#brief1">Huskeliste</a></li>
 					<li><a href="#download">Tilmelding</a></li>
 				</ul>
@@ -467,6 +505,41 @@
 </section>
 <!-- /END TESTIMONIALS SECTION -->
 
+
+
+<!-- =========================
+		 Address
+============================== -->
+<section id="address">
+	<div class="container">
+
+		<!-- SECTION HEADER -->
+		<div class="section-header wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s">
+		<br><br>
+			<!-- SECTION TITLE -->
+			<h2 class="dark-text">Adresse</h2>
+
+			<div class="colored-line">
+			</div>
+			<div class="section-description">
+				Højkolvej 23<br>
+				8380 Ry
+			</div>
+			<div class="colored-line">
+			</div>
+
+		</div>
+	<!-- /END SECTION HEADER -->
+
+	</div>
+<!-- /END CONTAINER -->
+</section>
+
+<section class="app-brief" id="map">
+	<div id="map"></div>
+</section>
+
+
 <!-- =========================
      BRIEF LEFT SECTION 
 ============================== -->
@@ -515,6 +588,7 @@
 
 </section>
 <!-- /END SECTION -->
+
 
 
 <!-- =========================
