--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 				<div class="intro-section">
 					
 					<!-- WELCOM MESSAGE -->
-					<h1 class="intro">Janaur 29.-31. 2016</h1>
+					<h1 class="intro">Januar 29.-31. 2016</h1>
 					<h5>En weekend på Højkol du sent vil glemme</h5>
 					
 					<!-- BUTTON -->
@@ -212,7 +212,7 @@
 		<div class="colored-line">
 		</div>
 		<div class="section-description">
-			Kom og fejre 3 <strike>unge</strike> gode mennesker 
+			Kom og fejr 3 <strike>unge</strike> gode mennesker 
 		</div>
 		<div class="colored-line">
 		</div>
