--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 		<div class="colored-line">
 		</div>
 		<div class="section-description">
-			Kom og fejr 3 <strike>unge</strike> gode mennesker 
+			Kom og fejr 3 <strike>unge</strike> gode mennesker træde ind i Club 40. Vi ønsker at fejre vores 3 x 40 års fødselsdage over en hel weekend i selskab med gode venner og familie  
 		</div>
 		<div class="colored-line">
 		</div>
@@ -240,7 +240,7 @@
 					<h4 class="main-color">Ankomst fredag aften</h4>
 					<p>
 						 29. januar 2016 fra kl. 19:00<br>
-						 Hygge og afslapning
+						 Hygge og afslapning. Der vil være snacks og drikkevare, men ingen servering
 
 					</p>
 				</div>
@@ -418,9 +418,8 @@
 
 				<!-- INFORMATION -->
 				<div class="name">
-					Rikke Kajhøj
+					Rikke Kajhøj - 09.02.76
 				</div>
-
 				<div class="company-info">
 					Favorit bakkedrik: Kakao Kahlua
 				</div>
@@ -446,7 +445,7 @@
 
 				<!-- INFORMATION -->
 				<div class="name">
-					Inge-Marie Ejby Buch Greisen
+					Inge-Marie Ejby Buch Greisen - 05.01.76
 				</div>
 
 				<div class="company-info">
@@ -474,7 +473,7 @@
 
 				<!-- INFORMATION -->
 				<div class="name">
-					Christian Mehlbye Buch Greisen
+					Christian Mehlbye Buch Greisen - 21.01.76
 				</div>
 
 				<div class="company-info">
@@ -527,6 +526,7 @@
 			</div>
 			<div class="colored-line">
 			</div>
+
 
 		</div>
 	<!-- /END SECTION HEADER -->
