BG fix på venue. Læsebredde på “plan”

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 		<h2 class="dark-text">The Plan</h2>
 		<div class="colored-line">
 		</div>
-		<div class="section-description">
+		<div class="section-description col-md-6 col-md-offset-3">
 			Kom og fejr 3 <strike>unge</strike> gode mennesker træde ind i Club 40. Vi ønsker at fejre vores 3 x 40 års fødselsdage over en hel weekend i selskab med gode venner og familie  
 		</div>
 		<div class="colored-line">
@@ -391,6 +391,50 @@
 
 
 
+
+<!-- =========================
+     Svar 
+============================== -->
+<!-- <section class="download" id="venue">
+
+<div class="color-overlay">
+
+	<div class="container">
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				
+				<div class="download-container">
+					<h1>The Venue</h1>
+					<div class="white-line"></div>
+					<h4>
+						Højkol
+					</h4>
+					<div class="company-info">
+						Grundlagt 1915 af Bommelum
+					</div>
+					
+					<div class="message">
+						<p>
+							600 kvm. 16 værelser. Balsal. Eminent udsigt over den-og-den dal. Etc. yada yada
+						</p>
+						<p>
+							Vi glæder os til at dele en god weekend med jer i skønne omgivelser
+						</p>
+					</div>
+				</div>		
+			</div> 
+			
+		</div> 
+		
+	</div>
+	
+</div>
+</section> -->
+<!-- /END DOWNLOAD SECTION -->
+
+
+
+
 <!-- =========================
      Venue 
 ============================== -->
@@ -398,15 +442,8 @@
 
 <div class="color-overlay">
 	
-	<div class="container wow fadeIn animated" data-wow-offset="10" data-wow-duration="2.5s">			
-		
-		<!-- FEEDBACKS -->
-		<div>
-
-			<!-- SINGLE FEEDBACK -->
+	<div class="container wow fadeIn animated" data-wow-offset="10" data-wow-duration="2.5s">								<div>
 			<div class="feedback">
-
-				<!-- INFORMATION -->
 				<h1>The Venue</h1>
 				<div class="white-line"></div>
 				<h4>
@@ -425,21 +462,12 @@
 					</p>
 				</div>
 
-			</div>
-			<!-- /END SINGLE FEEDBACK -->
-			
-		</div>
-		<!-- /END FEEDBACKS -->
-		
-	</div>
-	<!-- /END CONTAINER -->
-	
+			</div>	
+		</div>		
+	</div>	
 </div>
-<!-- /END COLOR OVERLAY -->
-
 </section>
-<!-- /END TESTIMONIALS SECTION -->
-
+<!-- /END VENUE SECTION -->
 
 
 
