--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 		<!-- PHONE IMAGE -->
 		<div class="col-md-4 col-sm-4">
 			<div class="phone-image wow bounceIn animated" data-wow-offset="120" data-wow-duration="1.5s">
-				<img src="images/screenshots/deer.png" alt="">
+				<img src="images/disco.png" alt="">
 			</div>
 		</div>
 		
