--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
         var mapOptions = {
             // How zoomed in you want the map to start at (always required)
             zoom: 9,
-
+            scrollwheel: false,
+            
             // The latitude and longitude to center the map (always required)
             center: new google.maps.LatLng(56.078254, 9.633826), // New York
 
