--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 					<li><a href="#venue">Venue</a></li>
 					<li><a href="#hvem">Fødselarer</a></li>
 					<li><a href="#brief1">Husk</a></li>
-					<li><a href="#download">Tilmelding</a></li>
+					<li><a href="#download">S.U.</a></li>
 				</ul>
 			</div>
 		</div> <!-- /END CONTAINER -->
@@ -701,8 +701,8 @@
 				
 				<!-- DOWNLOAD BUTTONS AREA -->
 				<div class="download-container">
-					<h2 class=" wow fadeInLeft animated" data-wow-offset="10" data-wow-duration="1.5s">Tilmeld dig ved at svare på email invitationen</h2>
-					<h4>Inden d. 4. December 2015</h4>
+					<h2 class=" wow fadeInLeft animated" data-wow-offset="10" data-wow-duration="1.5s">Meld venligst tilbage på email</h2>
+					<h4>S.U. inden d. 16. December 2015</h4>
 				</div>
 				<!-- END OF DOWNLOAD BUTTONS AREA -->
 				
