--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
 <meta charset="UTF-8">
 <meta name="description" content="Så er der fest...">
 <meta name="keywords" content="Fødselsdag">
@@ -30,7 +28,7 @@
 <!--[if lte IE 7]><script src="lte-ie7.js"></script><![endif]-->
 
 <!-- WEB FONTS -->
-<link href='http://fonts.googleapis.com/css?family=Roboto:100,300,100italic,400,300italic' rel='stylesheet' type='text/css'>
+<link href="http://fonts.googleapis.com/css?family=Roboto:100,300,100italic,400,300italic" rel="stylesheet" type="text/css">
 
 <!-- CAROUSEL AND LIGHTBOX -->
 <link rel="stylesheet" href="css/owl.theme.css">
@@ -201,7 +199,7 @@
 <!-- =========================
      FEATURES 
 ============================== -->
-<section class="features" id="features" id="features">
+<section class="features" id="features">
 
 <div class="container">
 	
@@ -368,9 +366,7 @@
 				<!-- FEATURE HEADING AND DESCRIPTION -->
 				<div class="fetaure-details">
 					<h4 class="main-color">Overnatning + fuld forplejning</h4>
-					<p>
-						 Læn jer tilbage og nyd weekenden 
-					</p>
+					<p>Læn jer tilbage og nyd weekenden. Det bliver årets fest...!</p>
 				</div>
 				
 			</div>
@@ -497,7 +493,7 @@
 			<div style="font-size:90%;line-height:1.6em;margin-top:20px;" class="section-description">
 				<p>Kan I ikke finde vej? Her er et par hints</p>
 				<p>
-					rute 461 mod Østbirk -> Gl.Rye
+					rute 461 mod Østbirk -&gt; Gl.Rye
 					<br>I Gl. Rye drej til venstre ad Hjarsbækvej mod Salten
 					<br>Efter ca 4,5 km drej til højre op ad Højkolvej (grusvej med stor rød port)
 					<br>Hold til højre når vejen deler sig (flere gange)
@@ -754,7 +750,7 @@
 	
 	<!-- COPYRIGHT TEXT -->
 	<p class="copyright">
-		©2015 Rikke, Ingse & Christian 
+		©2015 Rikke, Ingse &amp; Christian 
 	</p>
 
 </div>
@@ -784,5 +780,5 @@
 <script src="js/jquery.fitvids.js"></script>
 <script src="js/custom.js"></script>
 
-</body>
-</html>
+
+</body></html>
