--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 				<!-- FEATURE HEADING AND DESCRIPTION -->
 				<div class="fetaure-details">
 					<h4 class="main-color">Overnatning + fuld forplejning</h4>
-					<p>Læn jer tilbage og nyd weekenden. Det bliver årets fest...!</p>
+					<p>Læn jer tilbage og nyd weekenden</p>
 				</div>
 				
 			</div>
