Remove all traces of Højkol on request from the family leaders

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 				<div class="fetaure-details">
 					<h4 class="main-color">Afterski</h4>
 					<p>
-						  Aktiviteter om lørdagen efterfulgt af afterski-bar <em>Højkol outside</em>
+						  Aktiviteter om lørdagen efterfulgt af afterski-bar <em>120 outside</em>
 					</p>
 				</div>
 				
@@ -346,7 +346,7 @@
 					<p>
 						 Strictly adults
 						 <br>
-						 <em>What happens in Højkol stays in Højkol</em>
+						 <em>What happens at 120 stays at 120</em>
 					</p>
 				</div>
 				
@@ -443,9 +443,9 @@
 			<div class="feedback">
 				<h1>The Venue</h1>
 				<div class="white-line"></div>
-				<h4>
-					Højkol
-				</h4>
+				<!--<h4>
+					Venue
+				</h4>-->
 				<div class="company-info">
 					Grundlagt 1906
 				</div>
@@ -472,13 +472,12 @@
 <!-- =========================
 		 Adresse
 ============================== -->
+<!--
 <section id="address">
 	<div class="container">
 
-		<!-- SECTION HEADER -->
 		<div class="section-header wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s">
 		<br><br>
-			<!-- SECTION TITLE -->
 			<h2 class="dark-text">Adresse</h2>
 
 			<div class="colored-line">
@@ -504,12 +503,10 @@
 
 
 		</div>
-	<!-- /END SECTION HEADER -->
 
 	</div>
-<!-- /END CONTAINER -->
 </section>
-
+-->
 
 
 
@@ -517,10 +514,11 @@
 <!-- =========================
      MAP 
 ============================== -->
+<!--
 <section class="app-brief" id="map">
 	<div id="map"></div>
 </section>
-
+-->
 
 <!-- =========================
      TESTIMONIALS 
