Remove traces of “Højkol” (part 2)

--- a/index.html
+++ b/index.html
@@ -452,8 +452,8 @@
 				
 				<div class="message">
 					<p>
-						16 værelser, billard, sauna og udsigt over Salten Langsø og Højkol Skov.
-						<br>Overnatning vil være på Højkol, og I den nærliggende skovhytte, Rævedal.
+						16 værelser, billard, sauna og udsigt over sø og skov.
+						<br>Overnatning på godset, og I den nærliggende skovhytte, Rævedal.
 					</p>
 					<p>
 						Vi glæder os til at dele en god weekend med jer i skønne omgivelser.
